# sandbox_mth

./: README.md
affinity/: CMakeLists.txt  corepin.cxx
numeric/: CMakeLists.txt  minmaxavg-omp.asm  minmaxavg.asm  minmaxavg.cxx  mma-omp.patch
